[package]
name = "api-proxy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.sqlx]
version = "0.8"
features = ["sqlite", "macros", "runtime-tokio"]
default-features = false

[dependencies.reqwest]
version = "0.12"
features = ["rustls-tls-webpki-roots", "gzip"]
default-features = false

[dependencies.axum]
version = "0.8"

[dependencies.tracing-subscriber]
version = "0.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies.tikv-jemallocator]
version = "0.6"
default-features = false
features = ["background_threads"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
